# languagemodels

./: .gitignore  CMakeLists.txt  README.md  codegenc.h  codegenmlir.h  lang.h  lstm.py  makefile  rnn.cpp  tf-lstm.py
test-cpp-codegen/: makefile  test-delta-in-loop.c
